@@ -1,5 +1,10 @@
 2005-10-08  Kouhei Sutou  <kou@cozmixng.org>
 
+	* packages/cairo/ext/rb_cairo_path.c: Implemented cairo_path_t.
+	* packages/cairo/ext/rb_cairo.c: ditto.
+	* packages/cairo/ext/rb_cairo.h: ditto.
+	* packages/cairo/ext/cairo.def: ditto.
+
 	* packages/cairo/ext/rb_cairo_font_options.c: Fixed a typo.
 
 	* setup.rb: Added workaround for an error on Win32 platform.
